# cluster-api-provider-gcp

cloud/google/: BUILD.bazel  clientcomputeservice.go  machineactuator.go  machinesetactuator.go
cloud/google/clients/: computeservice.go
cloud/google/machineset/: BUILD.bazel  controller.go  zz_generated.api.register.go
cmd/contoller-manager/: BUILD.bazel  Makefile  main.go
cmd/controller-manager/: BUILD.bazel  Dockerfile  main.go
cmd/manager/: BUILD.bazel  main.go
config/default/: gcp_manager_image_patch.yaml
config/rbac/: rbac_role.yaml
pkg/cloud/google/: BUILD.bazel  clientcomputeservice.go  clientcomputeservice_test.go  machineactuator.go  machinesetactuator.go
pkg/cloud/google/clients/: computeservice.go
pkg/controller/: controller.go
pkg/controller/machineset/: BUILD.bazel  actuator.go  controller.go
